Refactor to tidy up some metrics asserts